--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ border-bottom: 1px solid #ECECEC;
 
 .nav-link:hover,
 .nav-link:focus {
-    border-bottom: 4px solid;
+    /* border-bottom: 4px solid; */
     color: var(--accent-cl);
 }
 
@@ -366,6 +366,7 @@ border-bottom: 1px solid #ECECEC;
     visibility: hidden;
     opacity: 0;
     pointer-events: none; 
+    transform: translate(-50%, -50%) scale(0.3);
     
 }
 
@@ -374,16 +375,119 @@ border-bottom: 1px solid #ECECEC;
     position: absolute;
     width: 528px;
     height: 581px;
-    left: 536px;
-    right: 536px;
-    bottom: 222px;
-
+    top: 50%;
+    left: 50%;
+    
     background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
 
     transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translate(-50%, -50%) scale(1);
 }
+/* 
+.form-title {
+    display: block;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--main-color);
+    margin-bottom: 12px;
+}
+
+.label {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+
+.lable-text {
+    margin-bottom: 4px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: var(--second-text-color);
+}
+
+.input-fild {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.comment {
+    display: flex;
+    resize: none;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding: 12px 16px;
+    outline: transparent;
+    transition: var(--modal-transition);
+    cursor: pointer;
+}
+
+.lable-checkbox {
+    display: flex;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    align-items: center;
+    justify-content: center;
+    color: var(--second-text-color);
+    margin: 20px 0 30px;
+    cursor: pointer;
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
+.custom-checkbox {
+    width: 16px;
+    height: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid var(--mine-color);
+    border-radius: 2px;
+    transition: var(--modal-transition);
+    margin-right: 7px;
+}
+
+.checkbox:checked+.custom-checkbox {
+    background-color: var(--accent-color);
+    border-color: var(--accent-color);
+}
+
+.lable-checkbox {
+    display: flex;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    align-items: center;
+    justify-content: center;
+    color: var(--second-text-color);
+    margin: 20px 0 30px;
+    cursor: pointer;
+}
+
+.policy-link {
+    color: var(--accent-color);
+} */
 
 .modal-close{
     box-sizing: border-box;
@@ -639,6 +743,7 @@ border-bottom: 1px solid #ECECEC;
 
 .portfolio-item:hover,
 .portfolio-item:focus{
+    color: var(--main-bg-cl);
     background-color: var(--accent-cl);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
     0px 1px 2px rgba(0, 0, 0, 0.08),
@@ -741,31 +846,40 @@ border-bottom: 1px solid #ECECEC;
 
 .overlay>p {
     background-color: rgba(33, 150, 243, 0.9);
-    
-    margin: 0;
-    font-size: 18px;
-    
+
+
 }
 
 .overlay code {
-    display: inline-block;
-    
-   
-    background: rgba(33, 150, 243, 0.9);
-    
+    position: absolute;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding-left: 24px;
+    padding-right: 24px;
+    transform: translate(0);
+    font-size: 18px;
+    line-height: 1.56;
+    transition: transform 250ms var(--hover-cubic);
+    color: #FFFFFF;
+    letter-spacing: 0.03em;
+    background-color: rgba(33, 150, 243, 0.9);
 }
 
 .box-text{
     font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 18px;
-line-height: 28px;
-/* or 156% */
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
+    /* or 156% */
+    text-align: center;
+    justify-content: center;
 
-letter-spacing: 0.03em;
+    letter-spacing: 0.03em;
 
-color: #FFFFFF;
+    color: #FFFFFF;
 }
 
 
