--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,10 @@ border-bottom: 1px solid #ECECEC;
     cursor: pointer;
     line-height: 4px;
     text-decoration: none;
-    transition: color 250ms var(--accent-cl);
+    transition: color 250ms var(--accent-cl), background-color 250ms var(--accent-cl),
+            box-shadow 250ms var(--accent-cl);
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 } 
 
 .top-nav:after {
@@ -246,6 +249,10 @@ border-bottom: 1px solid #ECECEC;
 
     transition: color 250ms var(--accent-cl);
 
+    transition: color 250ms var(--accent-cl);
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
     color: var(--secondary-txt-cl);
     fill: var(--secondary-txt-cl)
 
@@ -258,6 +265,10 @@ border-bottom: 1px solid #ECECEC;
 
 .studio-icon {
     margin-right: 10px;
+    /* transition: color 250ms var(--accent-cl), background-color 250ms var(--accent-cl),
+        box-shadow 250ms var(--accent-cl);
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .studio-icon:hover,
@@ -734,12 +745,10 @@ border-bottom: 1px solid #ECECEC;
 
     background: #F5F4FA ;
     border-radius: 4px;
-
-    /* transition: color var(--accent-cl);
+    transition: color 250ms var(--accent-cl), background-color 250ms var(--accent-cl),
+        box-shadow 250ms var(--accent-cl);
     transition-duration: 250ms;
-    transition-timing-function:; */
-    transition: color 1250ms var(--accent-cl), transform, background-color 250ms var(--accent-cl), 
-    box-shadow 250ms var(--accent-cl), cubic-bezier(0.4, 0, 0.2, 1);
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover,
@@ -772,8 +781,12 @@ border-bottom: 1px solid #ECECEC;
     margin: 12px;
     background: #FFFFFF;
     border: 1px solid #EEEEEE;
-     transition: color 250ms var(--accent-cl), background-color 250ms var(--accent-cl), box-shadow 250ms var(--accent-cl);
-}
+
+    transition: color 250ms var(--accent-cl), background-color 250ms var(--accent-cl), 
+    box-shadow 250ms var(--accent-cl);
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
 .projects-item :hover,
 .projects-item :focus{
@@ -847,7 +860,9 @@ border-bottom: 1px solid #ECECEC;
     background: rgba(33, 150, 243, 0.9);
 
     transform: translatey(100%);
-    transition: transform 250ms ease;
+    transition: transform 250ms ease color var(--accent-cl);
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .overlay>p {
@@ -931,7 +946,10 @@ border-bottom: 1px solid #ECECEC;
     width: 170px;
     height: 92px;
     margin: 15px;
+
     transition: color 250ms var(--accent-cl), background-color 250ms var(--accent-cl), box-shadow 250ms var(--accent-cl);
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-item :last-child{
@@ -951,17 +969,24 @@ border-bottom: 1px solid #ECECEC;
     box-sizing: border-box;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
+
+    transition: color 250ms var(--accent-cl), background-color 250ms var(--accent-cl),
+        box-shadow 250ms var(--accent-cl);
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-item:hover,
 .clients-item:focus{
-    transition: color 250ms var(--accent-cl), background-color 250ms var(--accent-cl), box-shadow 250ms var(--accent-cl);
     color: var(--accent-cl);
     border: 1px solid var(--accent-cl);
 }
 
 .client{
-    transition: color 250ms var(--accent-cl), background-color 250ms var(--accent-cl), box-shadow 250ms var(--accent-cl);
+            
+    /* transition: color 250ms var(--accent-cl), background-color 250ms var(--accent-cl), box-shadow 250ms var(--accent-cl);
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
     fill: var(--icon-color);
     fill: currentColor;
 }
@@ -971,7 +996,6 @@ border-bottom: 1px solid #ECECEC;
 .client:hover,
 .client:focus{
     color: var(--accent-cl);
-    transition: color 250ms var(--accent-cl) background-color 250ms var(--accent-cl), box-shadow 250ms var(--accent-cl);
 }
 
 /*============================*/
@@ -1078,7 +1102,8 @@ color: #FFFFFF;
 
     border-radius: 50%;
     transition: color 250ms var(--accent-cl), background-color 250ms var(--accent-cl), box-shadow 250ms var(--accent-cl);
-    
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .socials-icon-footer{
@@ -1092,7 +1117,6 @@ color: #FFFFFF;
 .socials-link:focus {
     color: #ffffff;
     background-color: var(--accent-cl);
-    transition: color 250ms #ffffff, background-color 250ms var(--accent-cl), box-shadow 250ms var(--accent-cl);
 }
 
 
