--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,13 @@
 
 /* icon color */
 --icon-color: #AFB1B8;
+
+
+--bg-dark: #2F303A;
+--bg-grey: #F5F4FA;
+--white: #ffffff;
+--black: #000000;
+--hover-cubic: cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 /* grid items */
@@ -44,6 +51,26 @@ li{
     margin: 0;
 }
 
+.body {
+
+    position: relative;
+    font-family: var(--main-font);
+    /* font-size: 14px;
+    line-height: 1.86;
+    letter-spacing: 0.02em;
+   */
+    /* color: var(--main-txt-cl); */
+
+    background: var(--main-bg-cl);
+}
+
+.container {
+    width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+
+}
+
 .link {
     text-decoration: none;
     color: currentColor;
@@ -55,30 +82,18 @@ li{
     margin: 0;
 }
 
+.btn {
+    border-style: none;
+    cursor: pointer;
+}
+
 /**
   |============================
   | Сітка для колекції з елементів
   |============================
 */
 
-.body{
-    position: relative;
-    font-family: var(--main-font);
-    font-size: 14px;
-    line-height: 1.86;
-    letter-spacing: 0.02em;
-  
-    color: var(--main-txt-cl);
-   
-    background: var(--main-bg-cl);
-}
 
-.container{
-    width: 1200px;
-    margin: 0 auto;
-    padding: 0 15px;
-    
-}
 
 /*============================*/
       /* Header*/
@@ -168,20 +183,20 @@ border-bottom: 1px solid #ECECEC;
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 } 
 
-.top-nav:after {
-    display: block;
+.top-nav::after {
+    content: '';
     position: absolute;
-    left: 0;
-    width: 0;
+    bottom: -1px;
+    left: 50%;
+    width: 100%;
     height: 4px;
-    background-color: var(--accent-cl);
-    
-
-    content: "";
-    transition: width 0.3s ease-out;
+    transform: translateX(-50%);
+    background-color: var(--accent-color);
+    border-radius: 2px;
 }
 
 .top-nav{
+    position: relative;
     border-bottom: 4px solid;
     color: var(--accent-cl);
 }
@@ -240,7 +255,7 @@ border-bottom: 1px solid #ECECEC;
 }
 
 .contact-link {
-    font-family: var(--secondary-txt-cl);
+    font-family: var(--main-font);
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
@@ -350,11 +365,11 @@ border-bottom: 1px solid #ECECEC;
     position: relative;
 
     display: inline-block;
-    box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     cursor: pointer;
     
-    color:var(--main-bg-cl);
+    
 }
 
 .hero-btn{
@@ -372,6 +387,247 @@ border-bottom: 1px solid #ECECEC;
     color: #FFFFFF;
 }
 
+
+/* МОДАЛЬНОЕ ОКНО */
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    z-index: 3;
+    opacity: 1;
+    transition: opacity 250ms var(--hover-cubic), visibility 250ms var(--hover-cubic);
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+}
+
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -40%);
+    opacity: 0;
+}
+
+.modal {
+    position: absolute;
+    width: 528px;
+    top: 50%;
+    left: 50%;
+    padding: 40px;
+
+    transform: translate(-50%, -50%);
+    opacity: 1;
+    transition: transform 250ms var(--hover-cubic), opacity 250ms var(--hover-cubic);
+
+    background-color: #fff;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+}
+
+.modal .btn.close {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+    transition: color 250ms var(--hover-cubic);
+
+    background-color: #FFFFFF;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
+
+.modal .btn.close:hover,
+.modal .btn.close:focus {
+    color: var(--accent-cl);
+}
+
+.modal .btn.close .icon {
+    fill: currentColor;
+}
+
+.modal .modal-title {
+    display: block;
+    font-size: 20px;
+    line-height: 1.15;
+    letter-spacing: 0.03em;
+
+    margin-bottom: 12px;
+    color: var(--text-black);
+}
+
+.modal .label,
+.modal .form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.modal .label {
+    width: 100%;
+}
+
+.modal .input-box {
+    position: relative;
+    width: 100%;
+}
+
+.modal .form .icon {
+    position: absolute;
+    top: 50%;
+    left: 12px;
+
+    transform: translatey(-50%);
+}
+
+.modal .label:not(:nth-last-child(-n +3)) {
+    margin-bottom: 10px;
+}
+
+.modal .label-text {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+
+    margin-bottom: 4px;
+    color: var(--text-grey);
+}
+
+.modal .label-text:last-child {
+    margin: 0;
+}
+
+.modal .input {
+    width: 100%;
+    height: 40px;
+    padding-left: 42px;
+    padding-right: 12px;
+    transition: border-color 250ms var(--hover-cubic);
+
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+}
+
+.modal .input:focus,
+.modal .textarea:focus {
+    border-color: var(--accent-cl);
+    outline: 0px;
+}
+
+.modal .input:focus+.icon {
+    fill: var(--accent-cl);
+}
+
+.modal .coment {
+    margin-bottom: 20px;
+}
+
+.modal .textarea {
+    resize: none;
+    width: 100%;
+    height: 120px;
+    padding: 12px 16px;
+
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+}
+
+.modal .textarea::placeholder {
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.01em;
+
+    color: rgba(117, 117, 117, 0.5);
+}
+
+.modal .confirm {
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+
+.modal .checkbox {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+
+}
+
+.modal .custom-checkbox {
+    border: 1px solid var(--black);
+    border-radius: 2px;
+    transition: background-color 250ms var(--hover-cubic);
+}
+
+.modal .checkbox:focus+.custom-checkbox {
+    border-color: var(--accent-cl);
+}
+
+.modal .checkbox:checked+.custom-checkbox {
+    background-color: var(--accent-cl);
+    border: 0;
+}
+
+.modal .confirm .label-text {
+    margin: 0;
+    padding: 0;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+    margin-left: 7px;
+
+    color: var(--text-grey);
+}
+
+.modal .link-checkbox {
+    color: var(--accent-cl);
+}
+
+.modal .form .btn {
+    display: flex;
+    align-items: center;
+    padding: 10px 55px;
+    margin-left: auto;
+    margin-right: auto;
+
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    transition: background-color 250ms var(--hover-cubic);
+
+
+    color: var(--main-bg-cl);
+    background-color: var(--accent-cl);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+}
+
+.modal .form .btn:hover,
+.modal .form .btn:focus {
+    background-color: #188CE8;
+}
+
+
+/* 
 .backdrop.is-hidden{
     visibility: hidden;
     opacity: 0;
@@ -394,7 +650,7 @@ border-bottom: 1px solid #ECECEC;
 
     transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transform: translate(-50%, -50%) scale(1);
-}
+} */
 /* 
 .form-title {
     display: block;
@@ -499,7 +755,7 @@ border-bottom: 1px solid #ECECEC;
     color: var(--accent-color);
 } */
 
-.modal-close{
+/* .modal-close{
     box-sizing: border-box;
     
     position: absolute;
@@ -517,7 +773,7 @@ border-bottom: 1px solid #ECECEC;
 
 .data-modal-close{
     position: relative;
-}
+} */
 
 /*============================*/
        /* About us*/
@@ -786,9 +1042,9 @@ border-bottom: 1px solid #ECECEC;
 }
 
 .projects-item{
-    margin: 12px;
+    margin: 15px;
     background: #FFFFFF;
-    border: 1px solid #EEEEEE;
+    
 
     transition: color 250ms var(--accent-cl), background-color 250ms var(--accent-cl), 
     box-shadow 250ms var(--accent-cl);
@@ -811,7 +1067,7 @@ border-bottom: 1px solid #ECECEC;
 
 .projects-item-title{
     padding: 20px 24px 20px 24px;
-    
+    border: 1px solid #EEEEEE;
 }
 
 .projects-desc{
