--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,8 @@
 --hover-cubic: cubic-bezier(0.4, 0, 0.2, 1)
 }
 
+
+
 /* grid items */
 .grid{
 --items: 1;
@@ -1321,15 +1323,16 @@ color: #FFFFFF;
 
 }
 
-.footer-contact {
-    display: flex;
-    margin-top: 9px;
-    line-height: 24px;
-    color: rgba(255, 255, 255, 0.6);
-    text-decoration: none;
-}
+
 .footer-contakt {
+    font-family: var(--main-font);
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
     margin-top: 9px;
+    color: var(--secondary-txt-cl);
 }
 
 /*======================*/
