--- a/css/style.css
+++ b/css/style.css
@@ -53,18 +53,18 @@ li{
     margin: 0;
 }
 
-.body {
+body {
 
     position: relative;
     font-family: var(--main-font);
-    /* font-size: 14px;
+    font-size: 14px;
     line-height: 1.86;
     letter-spacing: 0.02em;
-   */
-    /* color: var(--main-txt-cl); */
+     color: var(--main-txt-cl);
 
     background: var(--main-bg-cl);
-}
+} 
+
 
 .container {
     width: 1200px;
@@ -188,13 +188,21 @@ border-bottom: 1px solid #ECECEC;
 .top-nav::after {
     content: '';
     position: absolute;
-    bottom: -1px;
+
     left: 50%;
     width: 100%;
-    height: 4px;
+
     transform: translateX(-50%);
     background-color: var(--accent-color);
-    border-radius: 2px;
+    border-radius: 2px; 
+
+            display: block;
+
+            bottom: 0;
+
+            background-color: var(--accent-cl);
+
+        
 }
 
 .top-nav{
@@ -360,6 +368,7 @@ border-bottom: 1px solid #ECECEC;
 
     margin-left: auto;
     margin-right: auto;
+    border: none;
 
     width: 200px;
     height: 50px;
@@ -458,6 +467,7 @@ border-bottom: 1px solid #ECECEC;
 }
 
 .modal .modal-title {
+    font-family: var(--main-font);
     display: block;
     font-size: 20px;
     line-height: 1.15;
@@ -579,11 +589,16 @@ border-bottom: 1px solid #ECECEC;
     transition: background-color 250ms var(--hover-cubic);
 }
 
+.custom-checkbox:hover,
+.custom-checkbox:focus{
+    color:#fff;
+}
+
 .modal .checkbox:focus+.custom-checkbox {
     border-color: var(--accent-cl);
 }
 
-.modal .checkbox:checked+.custom-checkbox {
+.modal .checkbox:focus+.custom-checkbox {
     background-color: var(--accent-cl);
     border: 0;
 }
@@ -627,155 +642,6 @@ border-bottom: 1px solid #ECECEC;
 .modal .form .btn:focus {
     background-color: #188CE8;
 }
-
-
-/* 
-.backdrop.is-hidden{
-    visibility: hidden;
-    opacity: 0;
-    pointer-events: none; 
-    transform: translate(-50%, -50%) scale(0.3);
-    
-}
-
-.backdrop{
-    
-    position: absolute;
-    width: 528px;
-    height: 581px;
-    top: 50%;
-    left: 50%;
-    
-    background: #FFFFFF;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-
-    transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transform: translate(-50%, -50%) scale(1);
-} */
-/* 
-.form-title {
-    display: block;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 1.15;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--main-color);
-    margin-bottom: 12px;
-}
-
-.label {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
-}
-
-.lable-text {
-    margin-bottom: 4px;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.16;
-    letter-spacing: 0.01em;
-    color: var(--second-text-color);
-}
-
-.input-fild {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-}
-
-.comment {
-    display: flex;
-    resize: none;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    padding: 12px 16px;
-    outline: transparent;
-    transition: var(--modal-transition);
-    cursor: pointer;
-}
-
-.lable-checkbox {
-    display: flex;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    align-items: center;
-    justify-content: center;
-    color: var(--second-text-color);
-    margin: 20px 0 30px;
-    cursor: pointer;
-}
-
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-}
-
-.custom-checkbox {
-    width: 16px;
-    height: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 2px solid var(--mine-color);
-    border-radius: 2px;
-    transition: var(--modal-transition);
-    margin-right: 7px;
-}
-
-.checkbox:checked+.custom-checkbox {
-    background-color: var(--accent-color);
-    border-color: var(--accent-color);
-}
-
-.lable-checkbox {
-    display: flex;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    align-items: center;
-    justify-content: center;
-    color: var(--second-text-color);
-    margin: 20px 0 30px;
-    cursor: pointer;
-}
-
-.policy-link {
-    color: var(--accent-color);
-} */
-
-/* .modal-close{
-    box-sizing: border-box;
-    
-    position: absolute;
-    width: 30px;
-    height: 30px;
-    
-    left: 490px;
-    top: 8px;
-    right: 8px;
-    bottom: 543px;
-
-    background: #FFFFFF;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-.data-modal-close{
-    position: relative;
-} */
 
 /*============================*/
        /* About us*/
