--- a/css/style.css
+++ b/css/style.css
@@ -755,7 +755,7 @@ border-bottom: 1px solid #ECECEC;
     align-items: center;
     position: absolute;
     left: 0;
-    bottom: 0;
+    bottom: 10px;
     width: 100%;
     height: 70px;
     background: rgba(47, 48, 58, 0.8);
