--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,12 @@ ol[class] {
     padding: 0;
 }
 
+img{
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
 body,
 h1,
 h2,
@@ -755,7 +761,7 @@ border-bottom: 1px solid #ECECEC;
     align-items: center;
     position: absolute;
     left: 0;
-    bottom: 10px;
+    bottom: 0px;
     width: 100%;
     height: 70px;
     background: rgba(47, 48, 58, 0.8);
